--- a/more_gists/daily-js-user-data.html
+++ b/more_gists/daily-js-user-data.html
@@ -19,8 +19,6 @@
 
     <script>
       async function main() {
-        window.ROOM_URL = ROOM_URLS.local.websockets;
-
         const urlParams = new URLSearchParams(window.location.search);
         var callObjectMode = !urlParams.has('prebuilt');
         if (callObjectMode) {
@@ -111,7 +109,7 @@
       }
 
       function join() {
-        call.join({url: ROOM_URL});
+        call.join({url: window.ROOM_URL});
       }
 
       function leave() {
