--- a/more_gists/dual-call-object-testing.html
+++ b/more_gists/dual-call-object-testing.html
@@ -2,8 +2,8 @@
   <head>
     <title>stream local video file</title>
     <script src="../_roomInfo.js"></script>
-    <script src="../daily-iframe.js"></script>
-    <!-- <script src="https://unpkg.com/@daily-co/daily-js@0.24.0"></script> -->
+    <!-- <script src="../daily-iframe.js"></script> -->
+    <script src="https://unpkg.com/@daily-co/daily-js@0.44.1"></script>
     <!-- <script src="https://unpkg.com/@daily-co/daily-js"></script> -->
   </head>
   <body onload="main()">
@@ -20,14 +20,69 @@
         window.calls = [];
       }
 
+      const handleSetCallObject = async () => {
+        try {
+          const newCallObject = DailyIframe.createCallObject({
+            strictMode: true /** 
+            This will throw an error if you try to call DailyIframe.createCallObject() more than once on the same page.
+            @ref https://github.com/daily-co/daily-js/blob/4324dd75b5eb5e0c04bf74d212a9af9c40fa694b/README.md#duplicate-call-instances-will-not-be-allowed
+          */,
+            dailyConfig: {
+              experimentalChromeVideoMuteLightOff: true,
+              camSimulcastEncodings: simulcastSettingsArray(
+                DEFAULT_SIMULCAST_SETTINGS,
+              ),
+
+              ...(INTERNAL_FLAGS.EXPERIMENTAL_FLAG
+                ? { screenSimulcastEncodings: DEFAULT_SCREEN_SIMULCAST_SETTINGS }
+                : {}),
+
+              userMediaAudioConstraints: {
+                ...getSpecialAudioConstraints(),
+              },
+              userMediaVideoConstraints: {
+                ...DEFAULT_CAMERA_FEED_MEDIA_CONSTRAINTS,
+              },
+              /**
+               * @ref https://docs.daily.co/reference/rn-daily-js/daily-iframe-class/properties#micAudioMode
+               *
+               * Daily's example: https://gist.github.com/kwindla/bf016dfa76275efc3323f84e8a45803e
+               * Docs on encoding settings: https://developer.mozilla.org/en-US/docs/Web/API/RTCRtpSendParameters/encodings
+               */
+            },
+          });
+          window.callObject = newCallObject;
+          // setCallObject(newCallObject);
+        } catch (e) {
+          catchError(e, ERROR_MOD.VIDEO);
+
+          const existingCallObject = DailyIframe.getCallInstance();
+          await existingCallObject.destroy();
+          handleSetCallObject();
+        }
+      };
+      window.handleSetCallObject = handleSetCallObject;
+
+  // /* 1. set dailyCoCallObject */
+  // useEffect(() => {
+  //   if (callObject) return;
+  //   handleSetCallObject();
+  // }, []);
+
       async function createCallObject() {
-        let call = DailyIframe.createCallObject({
+        let call;
+        try {call = DailyIframe.createCallObject({
           subscribeToTracksAutomatically: true,
           dailyConfig: {
             experimentalChromeVideoMuteLightOff: true,
           },
           userName: window.calls.length,
+          strictMode: false
         });
+      } catch (e) {
+        console.log("aha! i caught you!", e);
+        return;
+      }
         call._instanceName = window.calls.length;
         window.calls.push(call);
 
