--- a/more_gists/subscriptions.html
+++ b/more_gists/subscriptions.html
@@ -3,6 +3,7 @@
     <title>track subscriptions</title>
     <script src="../_roomInfo.js"></script>
     <script src="https://unpkg.com/@daily-co/daily-js"></script>
+    <!-- <script src="https://unpkg.com/@daily-co/daily-js@0.31.0"></script> -->
   </head>
   <body onload="main()">
     <div>T R A C K S U B S</div>
